--- a/SistemaFact/SistemaFact/Reporte.rdlc
+++ b/SistemaFact/SistemaFact/Reporte.rdlc
@@ -28,7 +28,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>codigo de barra</Value>
+                              <Value />
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -88,7 +88,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Foto</Value>
+                              <Value />
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -127,7 +127,6 @@
                         </Border>
                       </Style>
                     </Image>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -212,10 +211,9 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
-        <Top>2.82787cm</Top>
-        <Left>2.64266cm</Left>
+        <Top>0.31433cm</Top>
         <Height>1.5175cm</Height>
-        <Width>9.29005cm</Width>
+        <Width>9.29004cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
