--- a/SistemaFact/SistemaFact/Reporte.rdlc
+++ b/SistemaFact/SistemaFact/Reporte.rdlc
@@ -9,7 +9,7 @@
               <Width>5.34838cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.67979cm</Width>
+              <Width>4.82833cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>2.26187cm</Width>
@@ -131,7 +131,7 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Textbox4">
+                    <Textbox Name="Textbox2">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
@@ -145,11 +145,10 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Textbox4</rd:DefaultName>
+                      <rd:DefaultName>Textbox2</rd:DefaultName>
                       <Style>
                         <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </Border>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
@@ -157,6 +156,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -213,7 +213,7 @@
         <DataSetName>DataSet1</DataSetName>
         <Top>0.31433cm</Top>
         <Height>1.5175cm</Height>
-        <Width>9.29004cm</Width>
+        <Width>12.43858cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
